css fix for footer in search on mobile

--- a/phone_0.css
+++ b/phone_0.css
@@ -944,6 +944,7 @@ img.embed_icon {
 #content_container.search {
     margin-top: 1em;
     padding-top: 1em;
+    margin-bottom: 1em;
 }
 
 #people_found {
